[package]
name = "ffind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
rayon = "1.4.1"
#walkdir = "2"
#regex = "1"
#jwalk = "0.5"
fuzzy-matcher = "0.3.7"
home = "0.5.3"
clap = { version = "3.1.5", features = ["derive"] }