[package]
name = "ffind"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mjehrhart/ffind"
description = "Fast Find is a cli written in rust using rayon parrellism for super fast results."
keywords = ["search", "file", "filesystem", "tool", "find"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
rayon = "1.4.1"
walkdir = "2"
regex = "1"
jwalk = "0.5"
fuzzy-matcher = "0.3.7"
home = "0.5.3"
clap = { version = "3.1.5", features = ["derive"] }
async-recursion = "1.0.0"
colored = "2"


[profile.dev]
opt-level = 0
panic = 'unwind'